Fix landing page x-overflow issue.

--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -156,6 +156,7 @@ i {
   max-width: 112.5rem;
   height: 100vh;
   position: relative;
+  overflow: hidden;
 }
 .o-index-text-wrapper {
   margin: 0 0 5rem 0;
