--- a/assets/styles/sass/objects/_wrappers.scss
+++ b/assets/styles/sass/objects/_wrappers.scss
@@ -18,6 +18,7 @@
         max-width: 112.5rem;
         height: 100vh;
         position: relative;
+        overflow: hidden;
     }
 
     &-text-wrapper {
